add_executable(foam
	algorithm.hh
	camera.cc
	camera.hh
	color_dialog.cc
	color_dialog.hh
	editor.cc
	editor.hh
	main.cc
	memory.hh
	pen.cc
	pen.hh
	room.cc
	room.hh
	sprite.cc
	sprite.hh
	vector.hh)

target_link_libraries(foam
	ui
	allegro_ttf
	allegro_font
	allegro_primitives
	allegro
	allegro_main)
